# aurebuildcheck-rs

./: Cargo.toml  LICENSE  README.md  build_release.sh
src/: cli.rs  cmd.rs  data.rs  main.rs  output.rs  process.rs
