[package]
name = "aurebuildcheck-rs"
version = "0.2.0"
authors = [
    "Matthias Krüger <matthias.krueger@famsik.de>",
    "Marc Mettke <marc@itmettke.de>"
]
repository = "https://github.com/matthiaskrgr/aurebuildcheck-rs"
homepage = "https://github.com/matthiaskrgr/aurebuildcheck-rs"
license = "MIT"
readme = "README.md"
description = "Archlinux package checker to identify packages which may need a rebuild"

[dependencies]
rayon = "0.9.0"
clap = "2.33.0"
json = "0.11.13"
regex = "0.2.6"

[profile.release]
lto = true
panic = 'abort'
codegen-units=1
