[package]
name = "aurebuildcheck-rs"
version = "0.2.5"
authors = [
    "Matthias Krüger <matthias.krueger@famsik.de>",
    "Marc Mettke <marc@itmettke.de>"
]
edition = "2018"
repository = "https://github.com/matthiaskrgr/aurebuildcheck-rs"
homepage = "https://github.com/matthiaskrgr/aurebuildcheck-rs"
license = "MIT"
readme = "README.md"
description = "Archlinux package checker to identify packages which may need a rebuild"
keywords = ["ldd", "archlinux"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33"
json = "0.12"
rayon = "1.3"
regex = "1.3"

[profile.release]
lto = true
panic = 'abort'
codegen-units=1
